--- a/styles/style-320.css
+++ b/styles/style-320.css
@@ -1,375 +1,332 @@
-body
-{
+body {
     font: 400 15px / 18px 'Montserrat';
-
-    width:320px;
-
     color: #000;
+    border-right: 1px solid black;
 }
 
-.big
-{
+.big {
     text-transform: uppercase;
 }
 
-.header
-{
+.header {
     display: flex;
     flex-direction: column;
-
-    background: url(images/bg-head.jpg);
-
+    background: url(/images/bg-head.jpg);
     align-items: center;
 }
-/*
-.header-top-span{
+
+.header-top-span {
     display: none;
 }
-*/
 
-.logo-header
-{
+.logo-header {
     margin: 10% auto;
 }
 
-.head-writings
-{
-    font-size: 2.2025em; /* 35.24px */
-    
-    line-height: 1.2; /* 34.489px */
-
+.head-writings {
+    font-size: 2.2025em;
+    /* 35.24px */
+    line-height: 1.2;
+    /* 34.489px */
     display: flex;
     flex-direction: column;
-
     height: 20%;
     margin: 30% auto;
-
     color: white;
-    background: url(images/bg-line.png) no-repeat 50% 50%;
-
+    background: url(/images/bg-line.png) no-repeat 50% 50%;
     justify-content: center;
-    
 }
 
-.be
-{
-    margin: 2%;
+.head-writings-img {
+    display: none;
+}
 
+.be {
+    margin: 2%;
     align-self: flex-start;
 }
 
-.play
-{
+.play {
     max-width: 80%;
     margin: 2%;
-
     align-self: flex-end;
 }
 
-.buttons
-{
-    display: flex;
+.sports-full {
+    display: none;
+}
 
+.buttons {
+    display: flex;
     justify-content: space-around;
 }
 
-button
-{
+button {
     font: 300 .5em 'Montserrat';
     line-height: 1.5em;
-
     display: flex;
-
     max-width: 44.375%;
     height: 39px;
     padding: 0 6%;
-
     text-align: left;
     text-transform: uppercase;
-
     color: #fff;
     border: none;
     border-radius: 2.5em;
     background-color: #5d40ad;
-
+    -webkit-box-shadow: 0 10px 10px #0a0e34;
+    box-shadow: 0 10px 10px #0a0e34;
     justify-content: center;
     align-items: center;
 }
 
-button span span
-{
+button span span {
     font-weight: 600;
 }
 
-button img
-{
+button img {
     margin: 0 5%;
 }
 
-.sports
-{
+.sports {
     display: flex;
-
     margin: .7em;
-
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.sports span
-{
-    font: 300 .75em "Montserrat";
-
+.sports span {
+    font: 300 .75em 'Montserrat';
     margin: .34em 5%;
-
     color: #9071ea;
 }
 
-h2
-{
-    font: 700 55.06px / 66.078px "Montserrat";
+.noslider-box {
+    display: none;
+}
 
+h2 {
+    font: 700 55.06px / 66.078px 'Montserrat';
     margin: 5%;
-
     text-transform: uppercase;
-
     color: #e7e7e7;
 }
-.slider-photo
-{
-    position: relative;
 
+.slider-photo {
+    position: relative;
     min-height: 200px;
     margin-bottom: 8%;
 }
 
-.ath-cross-1
-{
+.ath-cross-1 {
     position: absolute;
     top: 5%;
     left: 16.25%;
 }
 
-.ath-cross-2
-{
+.ath-cross-2 {
     position: absolute;
     top: 10%;
     left: 23.125%;
 }
 
-.ath-line
-{
+.ath-line {
     position: relative;
     left: 20%;
 }
 
-.footballer
-{
+.footballer {
     position: absolute;
+    z-index: 100;
     top: -5%;
     left: 20%;
-    z-index: 100;
 }
 
-.slider-text
-{
+.slider-text {
+    height: 185px;
     margin-top: -5%;
     padding-top: 10%;
-height: 185px;
     background-color: #f5f4f9;
 }
 
-h3
-{
-    font: 700 28px / 34.489px "Montserrat";
-
+h3 {
+    font: 700 28px / 34.489px 'Montserrat';
     text-transform: uppercase;
-
     color: #c1c1c1;
 }
 
-.slider h3:before
-{
+.slider h3:before {
     font-size: .6em;
-
     position: relative;
     top: -5px;
-
     margin: 2%;
-
     content: '02';
-
     color: #000;
     border-bottom: 4px outset #5e42b0;
 }
 
-.slider p
-{
+.slider p {
     margin: 2%;
-    }
+}
 
-.pl-cross-1
-{
+.pl-cross-1 {
     position: absolute;
     top: 5%;
     left: 16.25%;
 }
 
-.pl-cross-2
-{
+.pl-cross-2 {
     position: absolute;
     top: 10%;
     left: 23.125%;
 }
 
-.pl-line-1
-{
+.pl-line-1 {
     position: relative;
     top: 120px;
     left: 20%;
 }
 
-.pl-line-2
-{
+.pl-line-2 {
     position: relative;
     left: 30%;
 }
 
-.bplayer
-{
+.bplayer {
     position: absolute;
-    left: 0;
     z-index: 100;
+    left: 0;
 }
+
 h3.connection:before {
-    content: "01"
+    content: '01';
 }
-h3.growth:before
-{
+
+h3.growth:before {
     content: '03';
 }
 
-.points.active
-
-
-.photo-container
-{
+.points.active .photo-container {
     position: relative;
 }
 
-.points-photo
+.points-text .points-text-block h3 {
+    color: #e7e7e7;
+    position: relative;
+    right: 60px
+}
+
+
+/*
+.points-text-block span
 {
+    font: 700 28px / 34.489px 'Montserrat';
+
+    text-transform: uppercase;
+
+    color: #e7e7e7;
+    
+   
+}
+*/
+
+.points-photo {
     position: relative;
     z-index: 99;
     bottom: 60px;
     left: 19px;
-float: left;
+    float: left;
     width: 70px;
     height: 70px;
-
     text-align: center;
     vertical-align: middle;
-
     color: white;
     background-color: #5e42b0;
 }
 
-.points-photo span
-{
-    line-height: 70px;
+.points-photo-full {
+    display: none;
+}
 
+.points-photo span {
+    line-height: 70px;
     border-bottom: 4px outset rgba(255, 255, 255, .3);
 }
 
-.points-text
-{
+.points-text {
     padding: 0 10px 50px 10px;
 }
 
-.footer
-{
+.footer {
     display: flex;
     flex-direction: column;
-
-    background: url(images/footer-bg.jpg);
-
+    background: url(/images/footer-bg.jpg);
     align-items: center;
 }
 
-.logo-simple
-{
+.footer-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5%;
+}
+
+.logo-simple {
     margin-top: 97px;
 }
 
-.download
-{
+.show {
+    display: none;
+}
+
+.download {
     font-size: 2.2025em;
     /* 35.24px */
     line-height: 1.2;
-
     /* 34.489px */
     z-index: 2;
-
     color: white;
 }
 
-.show
-{
+.show {
     font: 700 15px Montserrat;
-
     z-index: 2;
-
     color: #9b8ec1;
 }
 
-.footer-text
-{
+.footer-text {
     position: relative;
-
     display: flex;
     flex-direction: column;
-
     height: 124px;
-
     text-align: center;
-
     justify-content: center;
 }
 
-.fline1
-{
+.fline1 {
     position: absolute;
     top: 30px;
 }
 
-.fline2
-{
+.fline2 {
     position: absolute;
     top: 0;
     left: 147px;
 }
 
-.social
-{
+.social {
     height: 50px;
     margin-top: 127px;
-
     background-color: rgba(10, 14, 52, .6);
-
     align-self: stretch;
     ;
 }
 
-.soc-width
-{
+.soc-width {
     display: flex;
-
     width: 124px;
     height: 50px;
     margin: auto;
-
     justify-content: space-between;
     align-items: center;
 }
-
-
