--- a/styles/style.css
+++ b/styles/style.css
@@ -1,561 +1,764 @@
-body {
+body
+{
     font: 400 15px / 18px 'Montserrat';
+
     color: #000;
 }
 
-.big {
+.big
+{
     text-transform: uppercase;
 }
 
-.header {
-    max-height: 960px;
+.header
+{
     display: flex;
     flex-direction: column;
-    background: url(images/header-big-bg.jpg);
-    background-size: cover;
+
+    max-height: 960px;
+
+    background: url(/images/header-big-bg.jpg);
+    background-color: rgba(94, 66, 176, .06);
     background-repeat: no-repeat;
-    background-position: center center;
     background-attachment: fixed;
-    background-color: rgba(94, 66, 176, 0.06);
+    background-position: center center;
+    background-size: cover;
+
     align-items: center;
 }
 
-.header-top {
-    height: 100px;
-    width: 80%;
+.header-top
+{
     display: flex;
+
+    width: 80%;
+    height: 100px;
+
     justify-content: space-between;
     align-items: center;
 }
 
-.logo-header {
+.logo-header
+{
     margin: ;
 }
 
-.header-top-span {
-    color: #ffffff;
-    font: 300 14px / 34.489px "Montserrat";
+.header-top-span
+{
+    font: 300 14px / 34.489px 'Montserrat';
+
+    color: #fff;
 }
 
-.writings-box {
-    width: 100%;
+.writings-box
+{
     position: relative;
+
+    width: 100%;
 }
 
-.head-writings {
-    height: 317px;
-    width: 85%;
-    font: 700 4.7vw / 0.4 "Montserrat";
+.head-writings
+{
+    font: 700 4.7vw / .4 'Montserrat';
+
     display: flex;
     flex-direction: column;
+
+    width: 85%;
+    height: 317px;
     margin: 5% auto;
+
     color: white;
+
     justify-content: center;
 }
 
-.head-writings-img {
+.head-writings-img
+{
     position: absolute;
+    z-index: 2;
     top: 50%;
     left: 29.5%;
+
     height: 17vw;
-    z-index: 2;
-    transform: translate(0%, -50%)
+
+    transform: translate(0%, -50%);
 }
 
-.be {
+.be
+{
+    z-index: 3;
+
     margin: 2%;
+
     align-self: flex-start;
-    z-index: 3
 }
 
-.play {
+.play
+{
+    z-index: 1;
+
     max-width: 80%;
     margin: 2%;
+
     align-self: flex-end;
-    z-index: 1;
 }
 
-.sports-full {
+.sports-full
+{
+    font: 300 .60vw 'Montserrat';
+
+    display: flex;
+
     width: 30%;
-    align-self: flex-end;
-    display: flex;
-    justify-content: space-between;
-    font: 300 .60vw "Montserrat";
     margin: .34em 2%;
+
     color: #9071ea;
+
+    align-self: flex-end;
+    justify-content: space-between;
 }
 
-.buttons {
-    display: flex;
-    justify-content: space-around;
+.buttons
+{
     position: relative;
     bottom: 60px;
+
+    display: flex;
+
+    justify-content: space-around;
 }
 
-button {
+button
+{
     font: 300 .5em 'Montserrat';
     line-height: 1.5em;
+
     display: flex;
+
     max-width: 44.375%;
     height: 39px;
     padding: 0 6%;
+
     text-align: left;
     text-transform: uppercase;
+
     color: #fff;
     border: none;
     border-radius: 2.5em;
     background-color: #5d40ad;
+    -webkit-box-shadow: 0 10px 10px #0a0e34;
+            box-shadow: 0 10px 10px #0a0e34;
+
     justify-content: center;
     align-items: center;
-    -webkit-box-shadow:  hoff voff blur #0a0e34;
-    box-shadow: 0 10px 10px #0a0e34;
 }
 
-button span span {
+button span span
+{
     font-weight: 600;
 }
 
-button img {
+button img
+{
     margin: 0 5%;
 }
 
-.sports {
+.sports
+{
     display: flex;
+    display: none;
+
     margin: .7em;
+
     flex-wrap: wrap;
     justify-content: center;
-    display: none;
 }
 
-.sports span {
-    font: 300 .75em "Montserrat";
+.sports span
+{
+    font: 300 .75em 'Montserrat';
+
     margin: .34em 5%;
+
     color: #9071ea;
 }
 
-h2 {
-    font: 700 55.06px / 66.078px "Montserrat";
+h2
+{
+    font: 700 55.06px / 66.078px 'Montserrat';
+
     margin: 5%;
+
     text-transform: uppercase;
+
     color: #e7e7e7;
 }
-.noslider-box{
+
+.noslider-box
+{
     position: relative;
-}
-.slider-photo {
-    position: relative;
-    min-height: 200px;
-    margin-bottom: 8%;
-    display: none;
-}
-.slider-photo-full-athlete{
-  position: absolute;
-    right:50%;
-    top:20%;
-  z-index: 5;
-    
 }
 
-.ath-cross-1 {
+.slider-photo
+{
+    position: relative;
+
+    display: none;
+
+    min-height: 200px;
+    margin-bottom: 8%;
+}
+
+.slider-photo-full-athlete
+{
+    position: absolute;
+    z-index: 5;
+    top: 20%;
+    right: 50%;
+}
+
+.ath-cross-1
+{
     position: absolute;
     top: 5%;
     left: 16.25%;
 }
 
-.ath-cross-2 {
+.ath-cross-2
+{
     position: absolute;
     top: 10%;
     left: 23.125%;
 }
 
-.ath-line {
+.ath-line
+{
     position: relative;
     left: 20%;
 }
 
-.footballer {
+.footballer
+{
     position: absolute;
+    z-index: 100;
     top: -5%;
     left: 20%;
-    z-index: 100;
-}
-.slider-photo-full-player{
-  position: absolute;
-    left:50%;
-    top:20%;
-  z-index: 5;
-    
-    
-}
-.footballer-full{
-    position: relative;
-    bottom:250px;
-    left:15%;
-    width:auto;
-    z-index: 1;
-    transform: scale(0.7)
-   }
-.cross-full-1 {
-  position: absolute;
-    left:230px;
-    top:-30px;
-    transform:scale(0.6);
 }
 
-.cross-full-2 {
-  position: absolute;
-    left:245px;
-    top:-20px;
-    transform:scale(0.6);
-}
-
-.line-full-1 {
-    width:30%;
+.slider-photo-full-player
+{
     position: absolute;
-    left: 290px;
-    top:40px;
-    z-index: 0;
-    transform: scale(2)
+    z-index: 5;
+    top: 20%;
+    left: 50%;
+}
 
-    
+.footballer-full
+{
+    position: relative;
+    z-index: 1;
+    bottom: 250px;
+    left: 15%;
+
+    width: auto;
+
+    transform: scale(.7);
 }
-.noslider-text {
+
+.cross-full-1
+{
+    position: absolute;
+    top: -30px;
+    left: 230px;
+
+    transform: scale(.6);
+}
+
+.cross-full-2
+{
+    position: absolute;
+    top: -20px;
+    left: 245px;
+
+    transform: scale(.6);
+}
+
+.line-full-1
+{
+    position: absolute;
+    z-index: 0;
+    top: 40px;
+    left: 290px;
+
+    width: 30%;
+
+    transform: scale(2);
+}
+
+.noslider-text
+{
     width: 100%;
-    
 }
-.texts {
+
+.texts
+{
     display: flex;
     flex-direction: column;
+
     align-items: stretch;
 }
 
-.noslider-heading {
-    text-align: left;
+.noslider-heading
+{
     width: 50%;
     margin-left: 50%;
+
+    text-align: left;
 }
-.noslider-heading h2, .noslider-heading-left h2{
+
+.noslider-heading h2,
+.noslider-heading-left h2
+{
     margin: 0;
 }
-.noslider-heading {
-    text-align: left;
+
+.noslider-heading
+{
     width: 50%;
     margin-left: 50%;
-}
-.noslider-heading-left{
+
     text-align: left;
+}
+
+.noslider-heading-left
+{
     width: 40%;
-    margin-right: 50%;  
+    margin-right: 50%;
     margin-left: 10%;
+
+    text-align: left;
 }
 
-
-.text-collaboration {
-    background-color: rgba(94, 66, 176, 0.06);
+.text-collaboration
+{
+    background-color: rgba(94, 66, 176, .06);
 }
 
-.text-growth {
+.text-growth
+{
+    color: white;
     background-color: #5e42b0;
-    color: white;
-}
-.text-growth-players {
-    background-color:#0a0e34;
-    color: white;
 }
 
-.noslider-text-content {
-    width:40%;
-    float:right;
+.text-growth-players
+{
+    color: white;
+    background-color: #0a0e34;
+}
+
+.noslider-text-content
+{
+    float: right;
+
+    width: 40%;
     margin-right: 10%;
     margin-bottom: 2%;
 }
-.left{
-    float:left;
-    margin-left: 10%;
+
+.left
+{
+    float: left;
+
     margin-right: 0;
+    margin-left: 10%;
 }
 
-.slider-box{
+.slider-box
+{
     display: none;
 }
-.slider-text {
+
+.slider-text
+{
+    height: 185px;
     margin-top: -5%;
     padding-top: 10%;
-    height: 185px;
-    background-color: #f5f4f9;
-    }
 
-h3 {
-    font: 700 28px / 34.489px "Montserrat";
+    background-color: #f5f4f9;
+}
+
+h3
+{
+    font: 700 28px / 34.489px 'Montserrat';
+
     text-transform: uppercase;
+
     color: #c1c1c1;
 }
-.noslider-box h2{
+
+.noslider-box h2
+{
     margin-top: 40px;
     margin-bottom: 40px;
-    
 }
 
-.slider-box h3:before, .noslider-box h3:before {
+.slider-box h3:before,
+.noslider-box h3:before
+{
     font-size: .6em;
+
     position: relative;
     top: -5px;
+
     margin: 2%;
+
     content: '02';
+
     color: #000;
     border-bottom: 4px outset #5e42b0;
 }
 
-.slider p {
+.slider p
+{
     margin: 2%;
 }
 
-.pl-cross-1 {
+.pl-cross-1
+{
     position: absolute;
     top: 5%;
     left: 16.25%;
 }
 
-.pl-cross-2 {
+.pl-cross-2
+{
     position: absolute;
     top: 10%;
     left: 23.125%;
 }
 
-.pl-line-1 {
+.pl-line-1
+{
     position: relative;
     top: 120px;
     left: 20%;
 }
 
-.pl-line-2 {
+.pl-line-2
+{
     position: relative;
     left: 30%;
 }
 
-.bplayer {
+.bplayer
+{
     position: absolute;
-    left: 0;
     z-index: 100;
+    left: 0;
 }
-.bplayer-full {
+
+.bplayer-full
+{
     position: relative;
-    bottom:270px;
-    right:30%;
-    width:auto;
     z-index: 1;
-    transform: scale(0.7)
+    right: 30%;
+    bottom: 270px;
+
+    width: auto;
+
+    transform: scale(.7);
 }
 
-.line-full-2 {
+.line-full-2
+{
     position: absolute;
-    left: -30px;
-    top:80px;
-    transform: scale(0.7);
     z-index: 0;
+    top: 80px;
+    left: -30px;
+
+    transform: scale(.7);
 }
 
-.line-full-3 {
+.line-full-3
+{
     position: absolute;
-    left:250px;
-    top:-150px;
-    transform: scale(0.7)
+    top: -150px;
+    left: 250px;
+
+    transform: scale(.7);
 }
 
-.cross-full-5 {
+.cross-full-5
+{
     position: absolute;
-    left:380px;
-    top:120px;
-    transform:scale(0.6);
+    top: 120px;
+    left: 380px;
+
+    transform: scale(.6);
 }
 
-.cross-full-3 {
+.cross-full-3
+{
     position: absolute;
-    left:85px;
-    top:-60px;
-    transform:scale(0.6);
+    top: -60px;
+    left: 85px;
+
+    transform: scale(.6);
 }
 
-.cross-full-4 {
+.cross-full-4
+{
     position: absolute;
-    left:70px;
-    top:-70px;
-    transform:scale(0.6);
+    top: -70px;
+    left: 70px;
+
+    transform: scale(.6);
 }
 
-h3.connection:before {
-    content: "01"
+h3.connection:before
+{
+    content: '01';
 }
 
-h3.growth:before {
+h3.growth:before
+{
     content: '03';
 }
-.photo-container{
+
+.photo-container
+{
+    position: relative;
+
     display: none;
-    position: relative;    
 }
-.photo-container-full{
+
+.photo-container-full
+{
     position: relative;
 }
-.photo-container-full {
-    width:60%;
+
+.photo-container-full
+{
+    width: 60%;
     min-height: 500px;
+
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
 }
-.active .photo-container-full{
-    background-image: url("images/active-full.jpg");
-    
-}
-.find .photo-container-full{
-    width: 40%;
-    background-image: url("images/find-full.jpg");
-    
-}
-.work .photo-container-full{
-    background-image: url("images/work-full.jpg");
-    
-    
-}
-.photo-container-full img{
-    width:100%;
-    margin-bottom: -5px;
-}
-.points{
-    display: flex;
-    
-}
-.find{
-    flex-direction: row-reverse;
-}
-.find .points-photo-full{
-    left:0;    
+
+.active .photo-container-full
+{
+    background-image: url('/images/active-full.jpg');
 }
 
-.points-photo {
+.find .photo-container-full
+{
+    width: 40%;
+
+    background-image: url('/images/find-full.jpg');
+}
+
+.work .photo-container-full
+{
+    background-image: url('/images/work-full.jpg');
+}
+
+.photo-container-full img
+{
+    width: 100%;
+    margin-bottom: -5px;
+}
+
+.points
+{
+    display: flex;
+}
+
+.find
+{
+    flex-direction: row-reverse;
+}
+
+.find .points-photo-full
+{
+    left: 0;
+}
+
+.points-photo
+{
     position: relative;
     z-index: 99;
     bottom: 60px;
     left: 19px;
+
     float: left;
+
     width: 70px;
     height: 70px;
+
     text-align: center;
     vertical-align: middle;
+
     color: white;
     background-color: #5e42b0;
 }
-.points-photo-full{
+
+.points-photo-full
+{
     position: absolute;
-    left:100%;
-    bottom:50%;
-    transform: translate(-50%)
+    bottom: 50%;
+    left: 100%;
+
+    transform: translate(-50%);
 }
 
-.points-photo span {
+.points-photo span
+{
     line-height: 70px;
+
     border-bottom: 4px outset rgba(255, 255, 255, .3);
 }
 
-.points-text {
-    width:40%;
+.points-text
+{
     position: relative;
-    
+
+    width: 40%;
 }
-.points-text-block{
+
+.points-text-block
+{
     position: absolute;
-    top:50%;
-    left:10%;
-    transform: translateY(-55px)
-    }
-.find .points-text{
-    width:60%;
+    top: 50%;
+    left: 10%;
+
+    transform: translateY(-55px);
 }
-.points-text h3{
-    color: #e7e7e7;
-    font: 700 6vh "Montserrat";
+
+.find .points-text
+{
+    width: 60%;
+}
+
+.points-text h3
+{
+    font: 700 6vh 'Montserrat';
+
     margin-top: 0;
+
+    color: #e7e7e7;
 }
-.find h3{
+
+.find h3
+{
     text-align: right;
 }
-.find .points-text-block{
-    left:auto;
-    right:8%;
+
+.find .points-text-block
+{
+    right: 8%;
+    left: auto;
 }
-.points-text p{
+
+.points-text p
+{
     width: 400px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
 
-.footer {
+.footer
+{
     display: flex;
     flex-direction: column;
-    background: url(images/footer-bg.jpg);
+
+    background:url(images/footer-bg-full.jpg);
+
     align-items: center;
 }
-
-.logo-simple {
-    margin-top: 97px;
+.footer-top{
+    display: flex;
+    align-items:center;
+    margin-top: 5%;
 }
 
-.download {
+
+.download
+{
     font-size: 2.2025em;
     /* 35.24px */
     line-height: 1.2;
+
     /* 34.489px */
     z-index: 2;
+
     color: white;
 }
 
-.show {
+.show
+{
     font: 700 15px Montserrat;
+
     z-index: 2;
+
     color: #9b8ec1;
 }
 
-.footer-text {
+.footer-text
+{
     position: relative;
+
     display: flex;
     flex-direction: column;
+
     height: 124px;
+
     text-align: center;
+
     justify-content: center;
 }
 
-.fline1 {
+.fline1
+{
     position: absolute;
     top: 30px;
 }
 
-.fline2 {
+.fline2
+{
     position: absolute;
     top: 0;
     left: 147px;
 }
-.buttons-footer{
-    bottom:0;
+
+.buttons-footer
+{
+    bottom: 0;
+
     margin-top: 5%;
 }
-.social {
+
+.social
+{
     height: 50px;
     margin-top: 127px;
+
     background-color: rgba(10, 14, 52, .6);
+
     align-self: stretch;
     ;
 }
 
-.soc-width {
+.soc-width
+{
     display: flex;
+
     width: 124px;
     height: 50px;
     margin: auto;
+
     justify-content: space-between;
     align-items: center;
 }
-
-
-
-
