--- a/styles/style-768.css
+++ b/styles/style-768.css
@@ -1,6 +1,7 @@
 body {
-    font: 400 15px / 18px 'Montserrat';
+    font: 400 18px / 28px 'Montserrat';
     color: #000;
+    border-right: 1px solid black;
 }
 
 .big {
@@ -43,7 +44,7 @@ body {
 }
 
 .head-writings {
-    font: 700 4.7vw / .4 'Montserrat';
+    font: 700 4.7vw / 1.2 'Montserrat';
     display: flex;
     flex-direction: column;
     width: 85%;
@@ -64,12 +65,12 @@ body {
 
 .be {
     z-index: 3;
-    margin: 2%;
+    margin: -1%;
     align-self: flex-start;
 }
 
 .play {
-    z-index: 1;
+    z-index: 3;
     max-width: 80%;
     margin: 2%;
     align-self: flex-end;
@@ -77,7 +78,7 @@ body {
 
 .sports-full {
     font: 300 .60vw 'Montserrat';
-    display: flex;
+    display: none;
     width: 30%;
     margin: .34em 2%;
     color: #9071ea;
@@ -85,33 +86,54 @@ body {
     justify-content: space-between;
 }
 
+
+
 .buttons {
     position: relative;
-    bottom: 60px;
+    top: 130px;
     display: flex;
     justify-content: space-around;
+    width: 100%;
 }
 
 button {
-    font: 300 .5em 'Montserrat';
+    font:300 0.8em 'Montserrat';
     line-height: 1.5em;
     display: flex;
-    width: 44.375%;
-    height: 39px;
-    padding: 0 5%;
+    max-width: 44.375%;
+    height: 77px;
+    padding: 0 10%;
     text-align: left;
     text-transform: uppercase;
     color: #fff;
     border: none;
-    border-radius: 2.5em;
+    border-radius: 5.5em;
     background-color: #5d40ad;
     -webkit-box-shadow: 0 10px 10px #0a0e34;
     box-shadow: 0 10px 10px #0a0e34;
     justify-content: center;
     align-items: center;
+    
 }
-button span {
-    width:140px;
+.apple{
+    background-image: url(/images/icon-apple-768.png);
+    background-repeat: no-repeat;
+    background-position: 12% 37%;
+}
+.img-apple{
+    display: none;
+}
+.google{
+    background-image: url(/images/icon-google-768.png);
+    background-repeat: no-repeat;
+    background-position: 15% 50%;
+}
+.img-google{
+    display: none;
+}
+button span{
+    width:auto;
+    margin: auto
 }
 button span span {
     font-weight: 600;
@@ -122,21 +144,23 @@ button img {
 }
 
 .sports {
+    position: relative;
+    bottom:130px;
+    width:100%;
     display: flex;
-    display: none;
-    margin: .7em;
-    flex-wrap: wrap;
-    justify-content: center;
+    margin: 100px;
+    flex-wrap: nowrap;
+    justify-content: space-around;
 }
 
 .sports span {
-    font: 300 .75em 'Montserrat';
-    margin: .34em 5%;
+    font: 300 1em 'Montserrat';
+    
     color: #9071ea;
 }
 
 h2 {
-    font: 700 55.06px / 66.078px 'Montserrat';
+    font: 700 80.06px / 66.078px 'Montserrat';
     margin: 5%;
     text-transform: uppercase;
     color: #e7e7e7;
@@ -157,7 +181,7 @@ h2 {
     position: absolute;
     z-index: 5;
     top: 20%;
-    right: 50%;
+    right: 60%;
 }
 
 .ath-cross-1 {
@@ -188,7 +212,7 @@ h2 {
     position: absolute;
     z-index: 5;
     top: 20%;
-    left: 50%;
+    left: 60%;
 }
 
 .footballer-full {
@@ -202,16 +226,16 @@ h2 {
 
 .cross-full-1 {
     position: absolute;
-    top: -30px;
-    left: 230px;
-    transform: scale(.6);
+    top: -120px;
+    left: 380px;
+    
 }
 
 .cross-full-2 {
     position: absolute;
-    top: -20px;
-    left: 245px;
-    transform: scale(.6);
+    top: -110px;
+    left: 400px;
+    
 }
 
 .line-full-1 {
@@ -273,15 +297,15 @@ h2 {
 
 .noslider-text-content {
     float: right;
-    width: 40%;
-    margin-right: 10%;
+    width: 60%;
+    margin-right: 5%;
     margin-bottom: 2%;
 }
 
 .left {
     float: left;
     margin-right: 0;
-    margin-left: 10%;
+    margin-left: 5%;
 }
 
 .slider-box {
@@ -385,14 +409,14 @@ h3 {
     position: absolute;
     top: -60px;
     left: 85px;
-    transform: scale(.6);
+    
 }
 
 .cross-full-4 {
     position: absolute;
     top: -70px;
     left: 70px;
-    transform: scale(.6);
+    
 }
 
 h3.connection:before {
@@ -402,7 +426,6 @@ h3.connection:before {
 h3.growth:before {
     content: '03';
 }
-
 h3.growth-violet:before {
     color: #8765dd;
 }
@@ -412,16 +435,14 @@ h3.growth-violet:before {
     display: none;
 }
 
-.photo-container-full {
-    position: relative;
-}
 
 .photo-container-full {
-    width: 60%;
+    width: 100%;
     min-height: 500px;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
+    position: relative;
 }
 
 .active .photo-container-full {
@@ -429,7 +450,6 @@ h3.growth-violet:before {
 }
 
 .find .photo-container-full {
-    width: 40%;
     background-image: url('/images/find-full.jpg');
 }
 
@@ -444,15 +464,10 @@ h3.growth-violet:before {
 
 .points {
     display: flex;
+    flex-direction: column;
 }
 
-.find {
-    flex-direction: row-reverse;
-}
 
-.find .points-photo-full {
-    left: 0;
-}
 
 .points-photo {
     position: relative;
@@ -460,8 +475,8 @@ h3.growth-violet:before {
     bottom: 60px;
     left: 19px;
     float: left;
-    width: 70px;
-    height: 70px;
+    width: 116px;
+    height: 116px;
     text-align: center;
     vertical-align: middle;
     color: white;
@@ -470,51 +485,36 @@ h3.growth-violet:before {
 
 .points-photo-full {
     position: absolute;
-    bottom: 50%;
-    left: 100%;
-    transform: translate(-50%);
+    bottom: 0%;
+    left: 4%;
+    transform:translateY(25px);
 }
 
 .points-photo span {
-    line-height: 70px;
+    font-size: 24px;
+    line-height: 116px;
     border-bottom: 4px outset rgba(255, 255, 255, .3);
 }
 
 .points-text {
     position: relative;
-    width: 40%;
+    width: 100%;
+    padding-left: 20px;
 }
-
-.points-text-block {
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translateY(-55px);
-}
-
-.find .points-text {
-    width: 60%;
-}
-
 .points-text h3 {
-    font: 700 6vh 'Montserrat';
-    margin-top: 0;
+    font: 700 12vh 'Montserrat';
     color: #e7e7e7;
-}
-
-.find h3 {
-    text-align: right;
-}
-
-.find .points-text-block {
-    right: 8%;
-    left: auto;
+    margin-top: 60px;
 }
 
 .points-text p {
     width: 400px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: -60px;
+    
+    
+}
+.points-text img{
+    margin-bottom: 40px;;
 }
 
 .footer {
@@ -525,13 +525,15 @@ h3.growth-violet:before {
 }
 
 .footer-top {
+    width:100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 15%;
 }
 
 .download {
-    font-size: 2.2025em;
+    font-size: 4em;
     /* 35.24px */
     line-height: 1.2;
     /* 34.489px */
@@ -540,47 +542,48 @@ h3.growth-violet:before {
 }
 
 .show {
-    font: 700 15px Montserrat;
+    font: 700 30px Montserrat;
     z-index: 2;
     color: #9b8ec1;
 }
 
 .footer-text {
+    margin-top: -20px;
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 124px;
+    height:314px;
     text-align: center;
     justify-content: center;
 }
 
 .fline1 {
     position: absolute;
+    
     top: 30px;
+    display:none;
 }
 
 .fline2 {
     position: absolute;
     top: 0;
     left: 147px;
+    display:none;
 }
-
-.fline1-768 {
+.fline1-768{
     position: absolute;
-    left: -10%;
-    transform: scale(0.5);
-    display: none;
+    left:-10%;
+    transform: scale(0.5)
+        
 }
-
-.fline2-768 {
+.fline2-768{
     position: absolute;
     left: 45%;
-    display: none
 }
 
 .buttons-footer {
-    bottom: 0;
     margin-top: 5%;
+    margin-bottom: 20%;
 }
 
 .social {
